Trust row: restore right-shifted position, gold text, viewport height fix

--- a/css/landing-upgrade.css
+++ b/css/landing-upgrade.css
@@ -464,7 +464,7 @@
 .aaai-top-trust {
   position: absolute;
   top: 120px;
-  left: 50%;
+  left: 72%;
   transform: translateX(-50%);
   display: flex;
   justify-content: center;
